# CityBuilder

./: .editorconfig  .gitignore  Cargo.toml  package.json  tsconfig.json
.delegate/doc/contracts/: PROTOCOL_AND_VERSION_CONTRACT.md
.delegate/doc/plugins/: POTENTIAL_PLUGIN_CATALOG.md
.delegate/work/20260304-205408-ts-layer-rust-boundary-refactor/: LOOPS.yaml  TASK.md
.delegate/work/20260304-205408-ts-layer-rust-boundary-refactor/01/: IMPLEMENTATION.md  PLAN.md  TEST.md
.delegate/work/20260304-working-game-refocus/07/: IMPLEMENTATION.md  PLAN.md  TEST.md
.delegate/work/20260304-working-game-refocus/08/: IMPLEMENTATION.md  PLAN.md  TEST.md
.github/workflows/: ci.yml
crates/city_core/: Cargo.toml
crates/city_core/src/: app.rs  lib.rs  plugin.rs  plugin_group.rs  resource.rs  schedule.rs  system.rs  terrain.rs  types.rs  zone.rs
crates/city_engine/: Cargo.toml
crates/city_engine/src/: archetype.rs  engine.rs  entity.rs  lib.rs  network.rs
crates/city_game/: Cargo.toml
crates/city_game/src/: lib.rs  main.rs  scenario.rs
crates/city_game/src/plugins/: archetypes.rs  mod.rs  terrain.rs  zoning.rs
crates/city_render/: Cargo.toml
crates/city_render/src/: hot_reload.rs  instance.rs  lib.rs  projection.rs  renderer.rs  sprites.rs  tile_visuals.rs
crates/city_render/src/shaders/: sprite.wgsl  terrain.wgsl
crates/city_sim/: Cargo.toml
crates/city_sim/src/: archetype.rs  commands.rs  events.rs  lib.rs  loader.rs  mapgen.rs  neighbors.rs  phase_wheel.rs  plugin.rs  render_bridge.rs  sim_map.rs  tilemap.rs  types.rs  world.rs
crates/city_sim/src/caches/: analysis_maps.rs  cache_manager.rs  dirty_tiles.rs  mod.rs
crates/city_sim/src/math/: fixed.rs  mod.rs  rng.rs  time.rs
plugins/base.buildings/: index.ts  manifest.json
plugins/base.buildings/__tests__/: buildings.test.ts
plugins/base.buildings/archetypes/: hospital.json  power_plant.json  school.json  shop.json  small_house.json
plugins/base.economy/: advanced.ts  economy.ts  index.ts  manifest.json
plugins/base.economy/__tests__/: advanced.test.ts  economy.test.ts
plugins/base.networks/: index.ts  manifest.json  multimodal.ts  roads.ts
plugins/base.networks/__tests__/: multimodal.test.ts  roads.test.ts
plugins/base.progression/: event_chains.ts  index.ts  manifest.json  scenarios.ts
plugins/base.progression/__tests__/: event_chains.test.ts  scenarios.test.ts
plugins/base.terrain/: manifest.json  terrain.ts
plugins/base.terrain/__tests__/: terrain.test.ts
plugins/base.world/: index.ts  manifest.json  presets.ts  start_profiles.ts
plugins/base.world/__tests__/: presets.test.ts  start_profiles.test.ts
plugins/base.world/content/: buildings.ron
scripts/: build.sh  test.sh
web/: index.html  package.json  vite.config.ts
web/src/: main.ts  sw.ts
web/src/__tests__/: main.test.ts  sw.test.ts
(+16 files in other folders)
