[workspace]
resolver = "2"
members = [
    "crates/city_core",
    "crates/city_engine",
    "crates/city_render",
    "crates/city_game",
    "packages/engine-wasm",
]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
city_core = { path = "crates/city_core" }
city_engine = { path = "crates/city_engine" }
city_render = { path = "crates/city_render" }

[profile.release]
opt-level = 2
lto = true
