[workspace]
resolver = "2"
members = [
    "crates/city_core",
    "crates/city_engine",
    "crates/city_render",
    "crates/city_game",
    "packages/engine-wasm",
]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
city_core = { path = "crates/city_core" }
city_engine = { path = "crates/city_engine" }
city_render = { path = "crates/city_render" }

[profile.release]
# opt-level = "z" for smallest WASM binary (best I-cache / JIT); use opt-level = 3
# for maximum throughput on native targets. Keeping 2 as a balanced default.
opt-level = 2
lto = true
codegen-units = 1  # required for LTO to inline across crates

[profile.bench]
# Use opt-level 3 for criterion benchmarks to avoid artificial throttling.
opt-level = 3
lto = true
codegen-units = 1
