[package]
name = "city_game"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "The city builder game — assembles plugins and game-specific content"

[[bin]]
name = "city_game"
path = "src/main.rs"

[dependencies]
city_core = { workspace = true }
city_engine = { workspace = true }
city_render = { workspace = true }
rand = "0.8"
