[package]
name = "city_game"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "The city builder game — assembles plugins and game-specific content"
default-run = "city_game"

[[bin]]
name = "city_game"
path = "src/main.rs"

[features]
default = []
hot-reload = ["city_render/hot-reload"]

[dependencies]
city_core = { workspace = true }
city_engine = { workspace = true }
city_sim = { workspace = true }
city_render = { workspace = true }
rand = "0.8"
