[package]
name = "city_render"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "City builder GPU rendering — wgpu backend, isometric camera, instanced sprites"

[features]
default = []
hot-reload = []

[dependencies]
city_core = { workspace = true }
wgpu = "24"
winit = "0.30"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
